# ZMLX

./: .gitignore  2-3-26plan.md  2-7-benchmark.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  UPSTREAM_PLAN.md  glm_4_7_flash_kernels.json  next-steps-2-5.md  pyproject.toml  setup_zmlx.sh
benchmarks/: LAB_NOTEBOOK.md  NEXT_AI_PIVOT_PROMPT.md  adamw_bench.py  bench_affine_dequant.py  bench_gather_qmm_swiglu.py  bench_glm47_flash_experiments.py  bench_glm_stress.py  bench_iso_variant_sweep.py  bench_lfm_baseline.py  bench_moe_e2e.py  bench_moe_streams.py  bench_moe_suite.py  bench_progressive_dequant.py  bench_progressive_swiglu.py  bench_qwen3_a3b_experiments.py  comprehensive_qwen30b_benchmark.py  efficient_seq_benchmark.py  intelligence_bench.py  matrix.jsonl  moe_models.txt  quick_benchmark.py  seq_length_benchmark.py
configs/: discovered_kernels.json  discovered_kernels_glm47_modelaware_auto.json  discovered_kernels_glm47_modelaware_auto_no_swiglu.json  kd_phase0_model_manifest.json  qwen35_sft_lora_template.yaml  qwen3_1p7b_kernel_sft_lora.yaml
discover_sessions/: glm_fused_swiglu_best.metal  glm_fused_swiglu_session.json  glm_rmsnorm_session.json  ttt_linear_decode_session.json
docs/: AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  DEEPSEEK_KIMI_ROUTER_FUSION.md  DISCOVER_PLAYBOOK.md  EXO.md  EXPERIMENTAL_MLX.md  FOUNDRY.md  HANDOFF_DEEPSEEK_KIMI.md  HANDOFF_GLM47_FLASH.md  KERNELS.md  KNOWLEDGE_BASE.md  LAB_NOTEBOOK.md  NEXT_SESSION.md  QUICKSTART.md  ROADMAP.md  SKV_GLM47.md  TOUR.md  hcsa.md  kernel_discovery.md
kernelpacks/: applegpu_g16s.json  phase0_setup_applegpu_g16s.json
tests/: compare_golden_values.py  conftest.py  generate_golden_values.py  test_activations_dsl.py  test_autotune_persistent.py  test_cross_backend.py  test_deepseek_router_pattern.py  test_deepseek_router_topk_sigmoid.py  test_defkernel.py  test_device_profile.py  test_discover.py  test_dsl_expr.py  test_family.py  test_fused_ops.py  test_gather_qmm_combine.py  test_glm47_rope_kernel.py  test_kb.py  test_kd.py  test_kernels_catalog.py  test_kernels_missing.py  test_kv_cache.py  test_kvtc.py  test_kvtc_skv_mla.py  test_match.py  (+13 more)
(+348 files in other folders)
