[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "zmlx"
version = "0.8.5"
description = "ZMLX: Metal-kernel toolkit and optimization lab for MLX on Apple Silicon. Fused MoE decode (+5-12% on LFM2-8B-A1B), custom GPU kernels in one line, 70+ kernel catalog."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hunter Bown" }]
keywords = ["zmlx", "mlx", "metal", "kernels", "apple-silicon", "autograd", "jit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mlx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/Hmbown/ZMLX"
Repository = "https://github.com/Hmbown/ZMLX"
Documentation = "https://github.com/Hmbown/ZMLX#readme"
Issues = "https://github.com/Hmbown/ZMLX/issues"
Changelog = "https://github.com/Hmbown/ZMLX/blob/main/CHANGELOG.md"

[project.scripts]
zmlx-exo = "zmlx.exo:main"
zmlx-kernel-discover = "zmlx.kd.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "types-PyYAML>=6.0",
]
kvtc = [
  "numpy>=1.24.0",
]
lm = [
  "mlx-lm>=0.25.0",
]
discover = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zmlx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
